--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:prod": "SET NODE_ENV=production&&nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
-    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
+    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Tisha Murvihill",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "@babel/polyfill": "^7.6.0",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.1.0",
     "eslint": "^6.3.0",
