--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning, Node, Express and mongoDB",
   "main": "app.js",
   "scripts": {
-    "start": "SET NODE_ENV=development&&nodemon server.js",
+    "start": "node server.js",
     "start:dev": "SET NODE_ENV=development&&nodemon server.js",
     "start:prod": "SET NODE_ENV=production&&nodemon server.js",
     "debug": "ndb server.js",
