--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "eslint": "^6.3.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -52,6 +53,6 @@
     "parcel-bundler": "^1.12.3"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": "^10"
   }
 }
